# POO_TD2-3-4

TD2/: CMakeLists.txt
TD2/src/: Equation.cpp  Equation.h  ITimeDiscretization.cpp  Problem.cpp  Problem.h  UniformTimeDiscretization.h
TD3/: CMakeLists.txt
TD3/src/: Equation.cpp  Equation.h  ITimeDiscretization.cpp  ITimeDiscretization.h  Problem.cpp  Problem.h  UniformTimeDiscretization.h  Variable.cpp  Variable.h  main.cpp  test.cpp
TD4/: CMakeLists.txt
TD4/src/: Equation.cpp  Equation.h  ITimeDiscretization.cpp  ITimeDiscretization.h  Problem.cpp  Problem.h  Timer.cpp  Timer.h  UniformTimeDiscretization.h  Variable.cpp  Variable.h  main.cpp  test.cpp
